# module-introduction-sensors-actuators

./: .gitignore  Makefile  README.md  conversion_notes.md  module-plan.md
coding_challenges/: trumpsays  view.py
part1/: 1-introduction.tex
part1/figs/: hall_effect.webm
part2/: 2-dc-motor-principles.tex  2-electromagnetism-dc-motors-1.tex
part3/: 3-dc-motor-principles.tex  3-electromagnetism-dc-motors-2.tex  3-electromagnetism.tex  electromagnetism-dc-motors-2.tex
part3/figs/: homopolarmotor.ogv
part4/: 4-encoders-sensors.tex  motor-control.tex
part5/: 4-encoders-sensors.tex  5-motor-control.tex  stepper-motors.tex
part5/figs/: stepper.mov
part6/: ros.tex
part7/: software-engineering.tex
part8/: force-sensors.tex
part9/: face-recognition-ros.tex
part9/src/facerec/: CMakeLists.txt  package.xml  setup.py
part9/src/facerec/scripts/: reco
part9/src/facerec/share/dataset/: dataset.csv
part9/src/facerec/src/facerec/: reco.py  subspace.py  util.py
practicals/: 1-git-linux-cmd-line.tex  Makefile  instructions.cls
practicals/1-git-linux-cmd-line/: 1-git-linux-cmd-line.tex
practicals/2-dc-motor/: 2-dc-motor.tex
practicals/3-incremental-encoder/: 3-incremental-encoder.tex
practicals/4-motor-control-arduino/: 4-motor-control-arduino.tex
practicals/5-stepper-motors/: 5-stepper-motors.tex
practicals/7-servo-project-2/: servo-project-2.tex
practicals/7-servo-project-2/code/: arduino-servos.cpp  arduino_servos.ino  robot-arm.urdf
practicals/style/: instructions.cls
prep-exam/: prep-exam.tex
style/: beamerthemehri.sty
